--- a/06_buscarJoao.html
+++ b/06_buscarJoao.html
@@ -7,8 +7,20 @@
 
     //ENTRADA
 
+    let listaDeNomes = ["João Pedro", "Gabriel José", "Ulisses Joao", "Pedro Henrique", "João da Silva", "João Henrique", "Alisson João"];
+    let joaos = [];
+
     //PROCESSAMENTO
-    
+
+    for (let nome of listaDeNomes) {
+        if (nome.search("João") >= 0 || (nome.search("Joao") >= 0)) {
+            joaos.push(nome);
+        }
+    }
+
     //SAÍDA
+
+    alert(joaos.sort());
+
 
 </script>
