--- a/07_contarInteirosPositivos.html
+++ b/07_contarInteirosPositivos.html
@@ -7,10 +7,19 @@
 
     //ENTRADA
 
-
+    let listaDeNumeros = [1, 2.5, -3, 4, 8.9, 4.789, -25.6, 42];
+    let numerosInteiros = [];
+    
     //PROCESSAMENTO
 
+    for(let numero of listaDeNumeros){
+        if(Number.isInteger(numero) && numero > 0){
+            numerosInteiros.push(numero);
+        }
+    }
 
     //SAÍDA
+
+    document.write(`Números INTEIROS e POSITIVOS: ${numerosInteiros}`);
 
 </script>
